--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,11 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/third/">Third Page</a>
+    <a href="/blog/">Blog</a>
+
 		<h1>not Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
