--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 interface Props {
 	title: string;
@@ -19,9 +20,16 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
+
 		<slot />
 
     <Footer />
+
+		<script>
+			import '../scripts/menu.js'
+		</script>
+
 	</body>
 </html>
 <style is:global>
@@ -38,7 +46,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		/* background: #13151a; */
 		background-size: 224px;
 	}
 	code {
