--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
-import Navigation from '../components/Navigation.astro';
-import Footer from '../components/Footer.astro';
+import '../styles/global.css'
+import Layout from '../layouts/Layout.astro'
 ---
 
 <html lang="en">
@@ -12,17 +12,14 @@ import Footer from '../components/Footer.astro';
     <title>Astro</title>
   </head>
   <body>
-
-    <Navigation />
-
-    <h1>My Astro Learning Blog</h1>
-    <p>This is where I will post about my journey learning Astro.</p>
-    <ul>
-      <li><a href="/posts/post-1/">Post 1</a></li>
-      <li><a href="/posts/post-2/">Post 2</a></li>
-      <li><a href="/posts/post-3/">Post 3</a></li>
-    </ul>
-
-    <Footer />
+    <Layout title='Astro blog'>
+      <h1>My Astro Learning Blog</h1>
+      <p>This is where I will post about my journey learning Astro.</p>
+      <ul>
+        <li><a href="/posts/post-1/">Post 1</a></li>
+        <li><a href="/posts/post-2/">Post 2</a></li>
+        <li><a href="/posts/post-3/">Post 3</a></li>
+      </ul>
+    </Layout>
   </body>
 </html>
