--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
+import { Code } from 'astro:components';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import '../styles/global.css'
 
 interface Props {
 	title: string;
