--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,9 @@
 ---
 import '../styles/global.css'
 import Layout from '../layouts/Layout.astro'
+import BlogIdxItem from '../components/BlogIdxItem.astro';
+
+const allPosts = await Astro.glob('../pages/posts/*.md');
 ---
 
 <html lang="en">
@@ -16,9 +19,7 @@ import Layout from '../layouts/Layout.astro'
       <h1>My Astro Learning Blog</h1>
       <p>This is where I will post about my journey learning Astro.</p>
       <ul>
-        <li><a href="/posts/post-1/">Post 1</a></li>
-        <li><a href="/posts/post-2/">Post 2</a></li>
-        <li><a href="/posts/post-3/">Post 3</a></li>
+        {allPosts.map(post => <BlogIdxItem url={post.url} title={post.frontmatter.title} />)}
       </ul>
     </Layout>
   </body>
